--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -571,56 +571,104 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.m-\[10px\] {
-  margin: 10px;
+.absolute {
+  position: absolute;
 }
 
-.inline {
-  display: inline;
+.relative {
+  position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-\[2px\] {
+  top: 2px;
+}
+
+.top-\[10px\] {
+  top: 10px;
+}
+
+.mb-9 {
+  margin-bottom: 2.25rem;
+}
+
+.ml-9 {
+  margin-left: 2.25rem;
 }
 
 .flex {
   display: flex;
 }
 
-.table {
-  display: table;
+.inline-flex {
+  display: inline-flex;
 }
 
-.hidden {
-  display: none;
+.h-0 {
+  height: 0px;
 }
 
-.h-\[100px\] {
-  height: 100px;
+.h-1\/6 {
+  height: 16.666667%;
 }
 
-.h-\[300px\] {
-  height: 300px;
+.h-4\/6 {
+  height: 66.666667%;
 }
 
-.h-auto {
-  height: auto;
+.h-48 {
+  height: 12rem;
+}
+
+.h-\[130px\] {
+  height: 130px;
+}
+
+.h-\[2px\] {
+  height: 2px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.w-\[150px\] {
-  width: 150px;
+.h-\[100px\] {
+  height: 100px;
 }
 
-.w-\[160px\] {
-  width: 160px;
+.h-\[50px\] {
+  height: 50px;
 }
 
-.w-\[200px\] {
-  width: 200px;
+.w-0 {
+  width: 0px;
 }
 
-.w-\[250px\] {
-  width: 250px;
+.w-48 {
+  width: 12rem;
+}
+
+.w-\[2px\] {
+  width: 2px;
 }
 
 .w-auto {
@@ -635,68 +683,64 @@ video {
   width: 100vw;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[300px\] {
+  width: 300px;
+}
+
+.-translate-x-full {
+  --tw-translate-x: -100%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-full {
+  --tw-translate-y: 100%;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.rotate-\[-40deg\] {
+  --tw-rotate: -40deg;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .items-center {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
 
-.justify-between {
-  justify-content: space-between;
-}
-
-.space-x-\[20px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(20px * var(--tw-space-x-reverse));
-  margin-left: calc(20px * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[5px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(5px * var(--tw-space-x-reverse));
-  margin-left: calc(5px * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-\[6px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(6px * var(--tw-space-x-reverse));
-  margin-left: calc(6px * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-\[10px\] > :not([hidden]) ~ :not([hidden]) {
+.space-y-\[15px\] > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
-  margin-top: calc(10px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(10px * var(--tw-space-y-reverse));
-}
-
-.space-y-\[16px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(16px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(16px * var(--tw-space-y-reverse));
-}
-
-.space-y-\[20px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(20px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(20px * var(--tw-space-y-reverse));
-}
-
-.space-y-\[2px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2px * var(--tw-space-y-reverse));
-}
-
-.space-y-\[3px\] > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(3px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(3px * var(--tw-space-y-reverse));
+  margin-top: calc(15px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(15px * var(--tw-space-y-reverse));
 }
 
 .space-y-\[5px\] > :not([hidden]) ~ :not([hidden]) {
@@ -705,80 +749,55 @@ video {
   margin-bottom: calc(5px * var(--tw-space-y-reverse));
 }
 
-.rounded-\[10px\] {
-  border-radius: 10px;
+.space-y-\[20px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(20px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(20px * var(--tw-space-y-reverse));
 }
 
-.rounded-\[2px\] {
-  border-radius: 2px;
+.space-y-\[10px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(10px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(10px * var(--tw-space-y-reverse));
 }
 
-.rounded-\[3px\] {
-  border-radius: 3px;
+.overflow-hidden {
+  overflow: hidden;
 }
 
-.rounded-\[5px\] {
-  border-radius: 5px;
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.rounded-\[8px\] {
-  border-radius: 8px;
+.rounded {
+  border-radius: 0.25rem;
 }
 
-.rounded-b-\[10px\] {
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
+.rounded-full {
+  border-radius: 9999px;
 }
 
-.rounded-t-\[10px\] {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+.border-\[2px\] {
+  border-width: 2px;
 }
 
-.rounded-t-\[5px\] {
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+.border-b-\[2px\] {
+  border-bottom-width: 2px;
 }
 
-.rounded-t-\[8px\] {
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
+.border-\[\#4acec7fa\] {
+  border-color: #4acec7fa;
 }
 
-.border {
-  border-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
-.border-r {
-  border-right-width: 1px;
-}
-
-.border-t {
-  border-top-width: 1px;
-}
-
-.border-red-500 {
+.border-white {
   --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.bg-\[\#00816a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 129 106 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#00bf96\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 191 150 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#1a1a1a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(26 26 26 / var(--tw-bg-opacity));
+.bg-\[\#4acec7fa\] {
+  background-color: #4acec7fa;
 }
 
 .bg-black {
@@ -786,14 +805,8 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-white {
@@ -801,114 +814,50 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+.bg-\[\#f9bb17\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 187 23 / var(--tw-bg-opacity));
 }
 
-.from-\[\#17f0a1\] {
-  --tw-gradient-from: #17f0a1 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(23 240 161 / 0) var(--tw-gradient-to-position);
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.from-\[\#ff8a05\] {
+  --tw-gradient-from: #ff8a05 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 138 5 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-\[\#1e9dee\] {
-  --tw-gradient-from: #1e9dee var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(30 157 238 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+.via-\[\#ff5478\] {
+  --tw-gradient-to: rgb(255 84 120 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #ff5478 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.from-\[\#673de4\] {
-  --tw-gradient-from: #673de4 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(103 61 228 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#7ccdff\] {
-  --tw-gradient-from: #7ccdff var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(124 205 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-\[\#fda682\] {
-  --tw-gradient-from: #fda682 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(253 166 130 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.via-\[\#b577c2\] {
-  --tw-gradient-to: rgb(181 119 194 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #b577c2 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.to-\[\#04ce89\] {
-  --tw-gradient-to: #04ce89 var(--tw-gradient-to-position);
-}
-
-.to-\[\#673de4\] {
-  --tw-gradient-to: #673de4 var(--tw-gradient-to-position);
-}
-
-.to-\[\#7196ff\] {
-  --tw-gradient-to: #7196ff var(--tw-gradient-to-position);
-}
-
-.to-\[\#a951e9\] {
-  --tw-gradient-to: #a951e9 var(--tw-gradient-to-position);
-}
-
-.to-\[\#f7789d\] {
-  --tw-gradient-to: #f7789d var(--tw-gradient-to-position);
-}
-
-.bg-center {
-  background-position: center;
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat;
+.to-\[\#ff00c6\] {
+  --tw-gradient-to: #ff00c6 var(--tw-gradient-to-position);
 }
 
 .p-\[10px\] {
   padding: 10px;
 }
 
-.p-\[14px\] {
-  padding: 14px;
-}
-
-.p-\[20px\] {
-  padding: 20px;
-}
-
-.p-\[4px\] {
-  padding: 4px;
-}
-
 .p-\[5px\] {
   padding: 5px;
 }
 
-.p-\[6px\] {
-  padding: 6px;
+.p-\[16px\] {
+  padding: 16px;
 }
 
-.px-\[10px\] {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.px-\[20px\] {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.px-\[2px\] {
-  padding-left: 2px;
-  padding-right: 2px;
+.px-\[16px\] {
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .px-\[30px\] {
@@ -921,14 +870,18 @@ video {
   padding-bottom: 10px;
 }
 
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .py-\[5px\] {
   padding-top: 5px;
   padding-bottom: 5px;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -937,14 +890,6 @@ video {
 
 .font-serif {
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
-.text-\[12px\] {
-  font-size: 12px;
-}
-
-.text-\[14px\] {
-  font-size: 14px;
 }
 
 .text-\[16px\] {
@@ -963,12 +908,12 @@ video {
   font-size: 24px;
 }
 
-.text-\[50px\] {
-  font-size: 50px;
+.text-\[14px\] {
+  font-size: 14px;
 }
 
-.font-\[500\] {
-  font-weight: 500;
+.font-\[400\] {
+  font-weight: 400;
 }
 
 .font-\[600\] {
@@ -979,36 +924,25 @@ video {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
+.font-medium {
+  font-weight: 500;
 }
 
-.uppercase {
-  text-transform: uppercase;
+.font-thin {
+  font-weight: 100;
+}
+
+.font-\[500\] {
+  font-weight: 500;
 }
 
 .italic {
   font-style: italic;
 }
 
-.text-\[\#414e66\] {
+.text-black {
   --tw-text-opacity: 1;
-  color: rgb(65 78 102 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-red-600 {
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1016,21 +950,67 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-yellow-300 {
+  --tw-text-opacity: 1;
+  color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-yellow-400 {
+  --tw-text-opacity: 1;
+  color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
-.filter {
-  -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-          filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.text-\[\#f9bb17\] {
+  --tw-text-opacity: 1;
+  color: rgb(249 187 23 / var(--tw-text-opacity));
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.delay-100 {
+  transition-delay: 100ms;
+}
+
+.delay-200 {
+  transition-delay: 200ms;
+}
+
+.delay-300 {
+  transition-delay: 300ms;
+}
+
+.duration-150 {
+  transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.duration-\[400ms\] {
+  transition-duration: 400ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .hover\:scale-105:hover {
@@ -1040,42 +1020,61 @@ video {
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@media (min-width: 640px) {
-  .sm\:block {
-    display: block;
-  }
-
-  .sm\:h-\[200px\] {
-    height: 200px;
-  }
-
-  .sm\:bg-cover {
-    background-size: cover;
-  }
+.hover\:border-\[\#4acec7fa\]:hover {
+  border-color: #4acec7fa;
 }
 
-@media (min-width: 768px) {
-  .md\:grid {
-    display: grid;
-  }
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
 
-  .md\:h-\[250px\] {
-    height: 250px;
-  }
+.hover\:text-\[\#4acec7fa\]:hover {
+  color: #4acec7fa;
+}
 
-  .md\:h-screen {
-    height: 100vh;
-  }
+.focus\:border-b-\[2px\]:focus {
+  border-bottom-width: 2px;
+}
 
-  .md\:w-\[300px\] {
-    width: 300px;
-  }
+.focus\:border-\[\#4acec7fa\]:focus {
+  border-color: #4acec7fa;
+}
 
-  .md\:w-screen {
-    width: 100vw;
-  }
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
 
-  .md\:border-none {
-    border-style: none;
-  }
+.focus\:ring-0:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.group:hover .group-hover\:mb-32 {
+  margin-bottom: 8rem;
+}
+
+.group:hover .group-hover\:ml-0 {
+  margin-left: 0px;
+}
+
+.group:hover .group-hover\:h-full {
+  height: 100%;
+}
+
+.group:hover .group-hover\:w-full {
+  width: 100%;
+}
+
+.group:hover .group-hover\:translate-x-0 {
+  --tw-translate-x: 0px;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
